--- a/Menus/index.html
+++ b/Menus/index.html
@@ -25,22 +25,22 @@ a menu in the Weasel GUI menu bar …" />
 <section id="section-intro">
 <p>Modules that contain the definition of the items forming
 a menu in the Weasel GUI menu bar.</p>
-<p>Demo.py - Contains the definition of the items in the Demo menu.
-Edit.py - Contains the definition of the items in the Edit menu,
-used to edit images and series.
-File.py - Contains the definition of the items in the File menu,
-used to open DICOM folders.
-GettingStarted_Developers.py - Contains the definitions of
-several top-level menus in the Weasel GUI menu bar.
-GettingStarted_EndUsers.py - Contains the definition of
-several top-level menus in the Weasel GUI menu bar.
-Help.py - Contains the definition of the items in the Help menu.
-Menus.xml - Contains the definition in XML format of
-several top-level menus in the Weasel GUI menu bar.
-Tutorial.py - Contains the definition of the items in the Tutorial menu.
-View.py - Contains the definition of the items in the View menu,
-used to view images and series.
-XNAT.py - Contains the definition of the items in the XNAT menu,
+<p>Demo.py - Contains the definition of the items in the Demo menu.</p>
+<p>Edit.py - Contains the definition of the items in the Edit menu,
+used to edit images and series.</p>
+<p>File.py - Contains the definition of the items in the File menu,
+used to open DICOM folders.</p>
+<p>GettingStarted_Developers.py - Contains the definitions of
+several top-level menus in the Weasel GUI menu bar.</p>
+<p>GettingStarted_EndUsers.py - Contains the definition of
+several top-level menus in the Weasel GUI menu bar.</p>
+<p>Help.py - Contains the definition of the items in the Help menu. </p>
+<p>Menus.xml - Contains the definition in XML format of
+several top-level menus in the Weasel GUI menu bar.</p>
+<p>Tutorial.py - Contains the definition of the items in the Tutorial menu. </p>
+<p>View.py - Contains the definition of the items in the View menu,
+used to view images and series. </p>
+<p>XNAT.py - Contains the definition of the items in the XNAT menu,
 used to upload and download DICOM data from XNAT.</p>
 <details class="source">
 <summary>
@@ -51,20 +51,29 @@ Modules that contain the definition of the items forming
 a menu in the Weasel GUI menu bar.
 
 Demo.py - Contains the definition of the items in the Demo menu.
+
 Edit.py - Contains the definition of the items in the Edit menu,
             used to edit images and series.
+
 File.py - Contains the definition of the items in the File menu, 
             used to open DICOM folders.
+
 GettingStarted_Developers.py - Contains the definitions of 
             several top-level menus in the Weasel GUI menu bar.
+
 GettingStarted_EndUsers.py - Contains the definition of 
             several top-level menus in the Weasel GUI menu bar.
+
 Help.py - Contains the definition of the items in the Help menu. 
+
 Menus.xml - Contains the definition in XML format of 
             several top-level menus in the Weasel GUI menu bar.
+
 Tutorial.py - Contains the definition of the items in the Tutorial menu. 
+
 View.py - Contains the definition of the items in the View menu, 
             used to view images and series. 
+
 XNAT.py - Contains the definition of the items in the XNAT menu, 
             used to upload and download DICOM data from XNAT. 
 &#34;&#34;&#34;</code></pre>
