--- a/CoreModules/index.html
+++ b/CoreModules/index.html
@@ -82,7 +82,7 @@ import Menus.Tutorial</code></pre>
 </dd>
 <dt><code class="name"><a title="WEASEL.CoreModules.TreeView" href="TreeView.html">WEASEL.CoreModules.TreeView</a></code></dt>
 <dd>
-<div class="desc"><p>class TreeView uses an XML file that describes a DICOM file structure to build a
+<div class="desc"><p>Class TreeView uses an XML file that describes a DICOM file structure to build a
 tree view showing a visual representation of that file structure.</p></div>
 </dd>
 <dt><code class="name"><a title="WEASEL.CoreModules.WeaselXMLReader" href="WeaselXMLReader.html">WEASEL.CoreModules.WeaselXMLReader</a></code></dt>
