--- a/CoreModules/index.html
+++ b/CoreModules/index.html
@@ -61,7 +61,7 @@ XMLMenuReader.py - Class for reading the XML file containing the definition of t
 
 import CoreModules.WriteXMLfromDICOM
 import DICOM.DeveloperTools
-import External.ImagingTools
+import External.Tools.ImageProcessing
 import Menus.Tutorial</code></pre>
 </details>
 </section>
