--- a/Pipelines/index.html
+++ b/Pipelines/index.html
@@ -114,6 +114,14 @@
 <dd>
 <div class="desc"></div>
 </dd>
+<dt><code class="name"><a title="WEASEL.Pipelines.Test_CreateSeriesBySliceLocation" href="Test_CreateSeriesBySliceLocation.html">WEASEL.Pipelines.Test_CreateSeriesBySliceLocation</a></code></dt>
+<dd>
+<div class="desc"></div>
+</dd>
+<dt><code class="name"><a title="WEASEL.Pipelines.Test_MergeSeriesByAcquisitionTime" href="Test_MergeSeriesByAcquisitionTime.html">WEASEL.Pipelines.Test_MergeSeriesByAcquisitionTime</a></code></dt>
+<dd>
+<div class="desc"></div>
+</dd>
 <dt><code class="name"><a title="WEASEL.Pipelines.Tutorial__BinaryOperations" href="Tutorial__BinaryOperations.html">WEASEL.Pipelines.Tutorial__BinaryOperations</a></code></dt>
 <dd>
 <div class="desc"></div>
@@ -186,10 +194,6 @@
 <dd>
 <div class="desc"></div>
 </dd>
-<dt><code class="name"><a title="WEASEL.Pipelines.WorkInProgress" href="WorkInProgress/index.html">WEASEL.Pipelines.WorkInProgress</a></code></dt>
-<dd>
-<div class="desc"></div>
-</dd>
 <dt><code class="name"><a title="WEASEL.Pipelines.XNAT__App" href="XNAT__App.html">WEASEL.Pipelines.XNAT__App</a></code></dt>
 <dd>
 <div class="desc"></div>
@@ -238,6 +242,8 @@
 <li><code><a title="WEASEL.Pipelines.File__ResetTreeView" href="File__ResetTreeView.html">WEASEL.Pipelines.File__ResetTreeView</a></code></li>
 <li><code><a title="WEASEL.Pipelines.File__SaveTreeView" href="File__SaveTreeView.html">WEASEL.Pipelines.File__SaveTreeView</a></code></li>
 <li><code><a title="WEASEL.Pipelines.Help__WeaselWeb" href="Help__WeaselWeb.html">WEASEL.Pipelines.Help__WeaselWeb</a></code></li>
+<li><code><a title="WEASEL.Pipelines.Test_CreateSeriesBySliceLocation" href="Test_CreateSeriesBySliceLocation.html">WEASEL.Pipelines.Test_CreateSeriesBySliceLocation</a></code></li>
+<li><code><a title="WEASEL.Pipelines.Test_MergeSeriesByAcquisitionTime" href="Test_MergeSeriesByAcquisitionTime.html">WEASEL.Pipelines.Test_MergeSeriesByAcquisitionTime</a></code></li>
 <li><code><a title="WEASEL.Pipelines.Tutorial__BinaryOperations" href="Tutorial__BinaryOperations.html">WEASEL.Pipelines.Tutorial__BinaryOperations</a></code></li>
 <li><code><a title="WEASEL.Pipelines.Tutorial__GaussianPixelValuesInNewSeries" href="Tutorial__GaussianPixelValuesInNewSeries.html">WEASEL.Pipelines.Tutorial__GaussianPixelValuesInNewSeries</a></code></li>
 <li><code><a title="WEASEL.Pipelines.Tutorial__HelloWorld" href="Tutorial__HelloWorld.html">WEASEL.Pipelines.Tutorial__HelloWorld</a></code></li>
@@ -256,7 +262,6 @@
 <li><code><a title="WEASEL.Pipelines.View__ImageMultiSlider" href="View__ImageMultiSlider.html">WEASEL.Pipelines.View__ImageMultiSlider</a></code></li>
 <li><code><a title="WEASEL.Pipelines.View__ImageMultiSliderROI" href="View__ImageMultiSliderROI.html">WEASEL.Pipelines.View__ImageMultiSliderROI</a></code></li>
 <li><code><a title="WEASEL.Pipelines.View__TileAllSubWindows" href="View__TileAllSubWindows.html">WEASEL.Pipelines.View__TileAllSubWindows</a></code></li>
-<li><code><a title="WEASEL.Pipelines.WorkInProgress" href="WorkInProgress/index.html">WEASEL.Pipelines.WorkInProgress</a></code></li>
 <li><code><a title="WEASEL.Pipelines.XNAT__App" href="XNAT__App.html">WEASEL.Pipelines.XNAT__App</a></code></li>
 </ul>
 </li>
