--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
 <dl>
 <dt><code class="name"><a title="WEASEL.API" href="API/index.html">WEASEL.API</a></code></dt>
 <dd>
-<div class="desc"></div>
+<div class="desc"><p>A collection of Weasel superclasses used for scripting pipelines …</p></div>
 </dd>
 <dt><code class="name"><a title="WEASEL.CoreModules" href="CoreModules/index.html">WEASEL.CoreModules</a></code></dt>
 <dd>
