--- a/Displays/ImageViewers/index.html
+++ b/Displays/ImageViewers/index.html
@@ -66,7 +66,9 @@ of the subwindows used to display DICOM images …</p></div>
 </dd>
 <dt><code class="name"><a title="WEASEL.Displays.ImageViewers.ImageViewer" href="ImageViewer.html">WEASEL.Displays.ImageViewers.ImageViewer</a></code></dt>
 <dd>
-<div class="desc"></div>
+<div class="desc"><p>Class ImageViewer creates an MDI subwindow for viewing an image or series of images
+with the facility to change the colour table applied to the
+…</p></div>
 </dd>
 <dt><code class="name"><a title="WEASEL.Displays.ImageViewers.ImageViewerROI" href="ImageViewerROI.html">WEASEL.Displays.ImageViewers.ImageViewerROI</a></code></dt>
 <dd>
