--- a/Menus/index.html
+++ b/Menus/index.html
@@ -25,7 +25,6 @@ a menu in the Weasel GUI menu bar …" />
 <section id="section-intro">
 <p>Modules that contain the definition of the items forming
 a menu in the Weasel GUI menu bar.</p>
-<p>Demo.py - Contains the definition of the items in the Demo menu.</p>
 <p>Edit.py - Contains the definition of the items in the Edit menu,
 used to edit images and series.</p>
 <p>File.py - Contains the definition of the items in the File menu,
@@ -49,8 +48,6 @@ used to upload and download DICOM data from XNAT.</p>
 <pre><code class="python">&#34;&#34;&#34;
 Modules that contain the definition of the items forming 
 a menu in the Weasel GUI menu bar.
-
-Demo.py - Contains the definition of the items in the Demo menu.
 
 Edit.py - Contains the definition of the items in the Edit menu,
             used to edit images and series.
@@ -92,12 +89,11 @@ XNAT.py - Contains the definition of the items in the XNAT menu,
 </dd>
 <dt><code class="name"><a title="WEASEL.Menus.GettingStarted_Developers" href="GettingStarted_Developers.html">WEASEL.Menus.GettingStarted_Developers</a></code></dt>
 <dd>
-<div class="desc"><p>Template menu illustrating the different approaches
-to building menus through the Weasel Programming Interface</p></div>
+<div class="desc"><p>This custom menu illustrates a different approach to building menus through the Weasel Programming Interface …</p></div>
 </dd>
 <dt><code class="name"><a title="WEASEL.Menus.GettingStarted_EndUsers" href="GettingStarted_EndUsers.html">WEASEL.Menus.GettingStarted_EndUsers</a></code></dt>
 <dd>
-<div class="desc"></div>
+<div class="desc"><p>This menu illustrates an approach to building menus through the Weasel Programming Interface …</p></div>
 </dd>
 <dt><code class="name"><a title="WEASEL.Menus.Help" href="Help.html">WEASEL.Menus.Help</a></code></dt>
 <dd>
@@ -105,7 +101,7 @@ to building menus through the Weasel Programming Interface</p></div>
 </dd>
 <dt><code class="name"><a title="WEASEL.Menus.Tutorial" href="Tutorial.html">WEASEL.Menus.Tutorial</a></code></dt>
 <dd>
-<div class="desc"></div>
+<div class="desc"><p>A standard Weasel menu providing functions that showcase simple algorithms and accessible examples on how to write your own processing pipeline.</p></div>
 </dd>
 <dt><code class="name"><a title="WEASEL.Menus.View" href="View.html">WEASEL.Menus.View</a></code></dt>
 <dd>
