--- a/CoreModules/index.html
+++ b/CoreModules/index.html
@@ -27,17 +27,17 @@ recommended not to amend these modules …" />
 <p>These modules are an important part of the Weasel infrastructure.
 Users are
 recommended not to amend these modules.</p>
-<p>DICOMFolder.py - Class for reading and summarizing contents of a DICOM folder.
-MenuBuilder.py - Class for building the menus in the menu bar of Weasel.
-StyleSheet.py - Contains Cascading Style Sheet commands for the styling of the PyQt
-widgets forming the Weasel GUI in a single string.
-TreeView.py - Class for building a tree view showing a visual representation of DICOM file structure.
-WeaselXMLReader.py - Class for reading, editing and writing the XML file summarising
-the contents of a DICOM folder.
-XMLConfigReader.py - Class for reading the Weasel XML configuration file.
-XMLMenuBuilder.py - Module of helper functions for building the menus in the menu bar of the MDI
-using the definition in an XML file.
-XMLMenuReader.py - Class for reading the XML file containing the definition of the Weasel menus.</p>
+<p>DICOMFolder.py - Class for reading and summarizing contents of a DICOM folder.</p>
+<p>MenuBuilder.py - Class for building the menus in the menu bar of Weasel.</p>
+<p>StyleSheet.py - Contains Cascading Style Sheet commands for the styling of the PyQt
+widgets forming the Weasel GUI in a single string.</p>
+<p>TreeView.py - Class for building a tree view showing a visual representation of DICOM file structure.</p>
+<p>WeaselXMLReader.py - Class for reading, editing and writing the XML file summarising
+the contents of a DICOM folder.</p>
+<p>XMLConfigReader.py - Class for reading the Weasel XML configuration file.</p>
+<p>XMLMenuBuilder.py - Module of helper functions for building the menus in the menu bar of the MDI
+using the definition in an XML file.</p>
+<p>XMLMenuReader.py - Class for reading the XML file containing the definition of the Weasel menus.</p>
 <details class="source">
 <summary>
 <span>Expand source code</span>
@@ -47,15 +47,22 @@ These modules are an important part of the Weasel infrastructure.  Users are
 recommended not to amend these modules.
 
 DICOMFolder.py - Class for reading and summarizing contents of a DICOM folder.
+
 MenuBuilder.py - Class for building the menus in the menu bar of Weasel.
+
 StyleSheet.py - Contains Cascading Style Sheet commands for the styling of the PyQt 
         widgets forming the Weasel GUI in a single string.
+
 TreeView.py - Class for building a tree view showing a visual representation of DICOM file structure.
+
 WeaselXMLReader.py - Class for reading, editing and writing the XML file summarising 
         the contents of a DICOM folder.
+
 XMLConfigReader.py - Class for reading the Weasel XML configuration file.
+
 XMLMenuBuilder.py - Module of helper functions for building the menus in the menu bar of the MDI 
         using the definition in an XML file.
+        
 XMLMenuReader.py - Class for reading the XML file containing the definition of the Weasel menus.
 &#34;&#34;&#34;
 
