--- a/Displays/ImageViewers/index.html
+++ b/Displays/ImageViewers/index.html
@@ -72,7 +72,8 @@ with the facility to change the colour table applied to the
 </dd>
 <dt><code class="name"><a title="WEASEL.Displays.ImageViewers.ImageViewerROI" href="ImageViewerROI.html">WEASEL.Displays.ImageViewers.ImageViewerROI</a></code></dt>
 <dd>
-<div class="desc"></div>
+<div class="desc"><p>Class ImageViewerROI creates an MDI subwindow for viewing an image or series of images
+with the facility to draw a Region of Interest ROI on the image.</p></div>
 </dd>
 </dl>
 </section>
