--- a/index.html
+++ b/index.html
@@ -59,6 +59,10 @@ recommended not to amend these modules …</p></div>
 <dd>
 <div class="desc"><p>Contains modules that support the display of the following in an MDI subwindow: …</p></div>
 </dd>
+<dt><code class="name"><a title="WEASEL.External" href="External/index.html">WEASEL.External</a></code></dt>
+<dd>
+<div class="desc"></div>
+</dd>
 <dt><code class="name"><a title="WEASEL.Menus" href="Menus/index.html">WEASEL.Menus</a></code></dt>
 <dd>
 <div class="desc"><p>Modules that contain the definition of the items forming
@@ -66,7 +70,7 @@ a menu in the Weasel GUI menu bar …</p></div>
 </dd>
 <dt><code class="name"><a title="WEASEL.Pipelines" href="Pipelines/index.html">WEASEL.Pipelines</a></code></dt>
 <dd>
-<div class="desc"></div>
+<div class="desc"><p>A collection of Weasel buttons that contains processes and calculations that are performed in the GUI …</p></div>
 </dd>
 <dt><code class="name"><a title="WEASEL.Weasel" href="Weasel.html">WEASEL.Weasel</a></code></dt>
 <dd>
@@ -93,6 +97,7 @@ a menu in the Weasel GUI menu bar …</p></div>
 <li><code><a title="WEASEL.CoreModules" href="CoreModules/index.html">WEASEL.CoreModules</a></code></li>
 <li><code><a title="WEASEL.DICOM" href="DICOM/index.html">WEASEL.DICOM</a></code></li>
 <li><code><a title="WEASEL.Displays" href="Displays/index.html">WEASEL.Displays</a></code></li>
+<li><code><a title="WEASEL.External" href="External/index.html">WEASEL.External</a></code></li>
 <li><code><a title="WEASEL.Menus" href="Menus/index.html">WEASEL.Menus</a></code></li>
 <li><code><a title="WEASEL.Pipelines" href="Pipelines/index.html">WEASEL.Pipelines</a></code></li>
 <li><code><a title="WEASEL.Weasel" href="Weasel.html">WEASEL.Weasel</a></code></li>
