--- a/Weasel.html
+++ b/Weasel.html
@@ -373,9 +373,8 @@ if __name__ == &#39;__main__&#39;:
 <span>(</span><span>arguments)</span>
 </code></dt>
 <dd>
-<div class="desc"><p>A collection of methods for weasel scripting.
-Collected together to avoid multiple import statements
-in Weasel.py</p>
+<div class="desc"><p>A collection of methods for weasel scripting.</p>
+<p>StaticMethods, Display, EditMenus, Messaging, ReadWrite and UserInterfaceTools are bundled together to avoid multiple import statements in Weasel.py</p>
 <p>Creates the WEASEL Command-line class.</p></div>
 <details class="source">
 <summary>
