--- a/index.html
+++ b/index.html
@@ -61,7 +61,9 @@ recommended not to amend these modules …</p></div>
 </dd>
 <dt><code class="name"><a title="WEASEL.External" href="External/index.html">WEASEL.External</a></code></dt>
 <dd>
-<div class="desc"></div>
+<div class="desc"><p>This folder contains 3rd party packages that are used in this Weasel project.
+You can find a list of these below with their respective version.
+Each …</p></div>
 </dd>
 <dt><code class="name"><a title="WEASEL.Menus" href="Menus/index.html">WEASEL.Menus</a></code></dt>
 <dd>
