--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@ a menu in the Weasel GUI menu bar …</p></div>
 </dd>
 <dt><code class="name"><a title="WEASEL.Pipelines" href="Pipelines/index.html">WEASEL.Pipelines</a></code></dt>
 <dd>
-<div class="desc"><p>A collection of Weasel buttons that contains processes and calculations that are performed in the GUI …</p></div>
+<div class="desc"><p>A collection of Weasel buttons that contain processes and calculations that are performed in the GUI …</p></div>
 </dd>
 <dt><code class="name"><a title="WEASEL.Weasel" href="Weasel.html">WEASEL.Weasel</a></code></dt>
 <dd>
