--- a/index.html
+++ b/index.html
@@ -67,8 +67,8 @@ Each …</p></div>
 </dd>
 <dt><code class="name"><a title="WEASEL.Menus" href="Menus/index.html">WEASEL.Menus</a></code></dt>
 <dd>
-<div class="desc"><p>Modules that contain the definition of the items forming
-a menu in the Weasel GUI menu bar …</p></div>
+<div class="desc"><p>This folder contains Python and XML files that define the menus in the
+menu bar at the top of the Weasel GUI …</p></div>
 </dd>
 <dt><code class="name"><a title="WEASEL.Pipelines" href="Pipelines/index.html">WEASEL.Pipelines</a></code></dt>
 <dd>
