--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@ recommended not to amend these modules …</p></div>
 </dd>
 <dt><code class="name"><a title="WEASEL.DICOM" href="DICOM/index.html">WEASEL.DICOM</a></code></dt>
 <dd>
-<div class="desc"></div>
+<div class="desc"><p>Contains modules that read and save files in DICOM format within the Weasel GUI …</p></div>
 </dd>
 <dt><code class="name"><a title="WEASEL.Displays" href="Displays/index.html">WEASEL.Displays</a></code></dt>
 <dd>
