--- a/Menus/index.html
+++ b/Menus/index.html
@@ -66,9 +66,10 @@ in the menu bar,</p>
 
     pipeline = 'My_Module_Name')
 </code></pre>
-<p>where
-label = Menu item name in the drop down menu.</p>
-<pre><code>  tooltip = Menu item tooltip displayed when the mouse pointer 
+<p>where </p>
+<pre><code>  label = Menu item name in the drop down menu.
+
+  tooltip = Menu item tooltip displayed when the mouse pointer 
             hovers over the menu item.
 
   pipeline = The name of the Python module without the .py extension
@@ -158,6 +159,7 @@ Items in this menu are created with the following function call,
         pipeline = &#39;My_Module_Name&#39;)
 
 where 
+      
       label = Menu item name in the drop down menu.
 
       tooltip = Menu item tooltip displayed when the mouse pointer 
