--- a/CoreModules/StyleSheet.html
+++ b/CoreModules/StyleSheet.html
@@ -26,7 +26,7 @@
 <summary>
 <span>Expand source code</span>
 </summary>
-<pre><code class="python">TRISTAN_GREY = &#34;&#34;&#34;
+<pre><code class="python">WEASEL_GREY = &#34;&#34;&#34;
                 QPushButton {
                              background-color: qlineargradient(x1: 0, y1: 0, x2: 0, y2: 1,
                                       stop: 0 #CCCCBB, stop: 1 #FFFFFF);
