--- a/Weasel.html
+++ b/Weasel.html
@@ -133,7 +133,7 @@ class Weasel(QMainWindow, WeaselProgrammingInterface):
         self.weaselDataFolder = self.objConfigXMLReader.getWeaselDataFolder()
         self.menuBuilder.buildMenus()
         
-        self.setStyleSheet(styleSheet.TRISTAN_GREY)
+        self.setStyleSheet(styleSheet.WEASEL_GREY)
         logger.info(&#34;Weasel GUI created successfully.&#34;)
 
 
@@ -343,7 +343,7 @@ if __name__ == &#39;__main__&#39;:
         self.weaselDataFolder = self.objConfigXMLReader.getWeaselDataFolder()
         self.menuBuilder.buildMenus()
         
-        self.setStyleSheet(styleSheet.TRISTAN_GREY)
+        self.setStyleSheet(styleSheet.WEASEL_GREY)
         logger.info(&#34;Weasel GUI created successfully.&#34;)
 
 
