--- a/CoreModules/index.html
+++ b/CoreModules/index.html
@@ -85,7 +85,8 @@ import Menus.Tutorial</code></pre>
 </dd>
 <dt><code class="name"><a title="Weasel.CoreModules.StyleSheet" href="StyleSheet.html">Weasel.CoreModules.StyleSheet</a></code></dt>
 <dd>
-<div class="desc"></div>
+<div class="desc"><p>The string WEASEL_GREY contains the Cascading Style Sheet (CSS) commands that
+define the appearance and behaviour of the PyQt widgets in the Weasel GUI …</p></div>
 </dd>
 <dt><code class="name"><a title="Weasel.CoreModules.TreeView" href="TreeView.html">Weasel.CoreModules.TreeView</a></code></dt>
 <dd>
